@@ -1,5 +1,6 @@
 package tn.esprit.controllers;
 
+import javafx.beans.property.SimpleStringProperty;
 import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -7,30 +8,27 @@ import javafx.fxml.FXMLLoader;
 import javafx.scene.Node;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
+import javafx.geometry.Pos;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
-import javafx.scene.control.Hyperlink;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.Label;
 import javafx.scene.control.TableCell;
 import javafx.scene.control.TableColumn;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
 import javafx.scene.control.cell.PropertyValueFactory;
 import javafx.scene.layout.HBox;
-import javafx.stage.FileChooser;
 import javafx.stage.Stage;
+import tn.esprit.entities.User;
 import tn.esprit.entities.categorie;
 import tn.esprit.entities.resources;
 import tn.esprit.services.CategoryService;
 import tn.esprit.services.ResourceService;
+import tn.esprit.utils.ResourceNavigationContext;
+import tn.esprit.utils.UserSession;
 
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -39,37 +37,69 @@ public class ResourceListController {
 
     @FXML
     private TableView<resources> resourceTable;
-
     @FXML
     private TableColumn<resources, String> titreColumn;
-
     @FXML
     private TableColumn<resources, String> categorieColumn;
-
+    @FXML
+    private TableColumn<resources, String> chapitreColumn;
     @FXML
     private TableColumn<resources, String> dateColumn;
-
     @FXML
-    private TableColumn<resources, Void> fileColumn;
-
+    private TableColumn<resources, String> statusColumn;
     @FXML
-    private TableColumn<resources, Void> actionColumn;
-
+    private TableColumn<resources, String> contenuColumn;
+    @FXML
+    private TableColumn<resources, Void> actionsColumn;
     @FXML
     private TextField searchField;
-
     @FXML
     private Button createButton;
+    @FXML
+    private Label pageTitleLabel;
 
     private final ResourceService resourceService = new ResourceService();
     private final CategoryService categoryService = new CategoryService();
     private final Map<String, String> categoryNames = new HashMap<>();
+    private Map<Integer, String> chapitreTitles = new HashMap<>();
+
+    private Integer selectedChapitreId;
+    private boolean studentMode;
 
     @FXML
     public void initialize() {
+        selectedChapitreId = ResourceNavigationContext.getChapitreId();
+        studentMode = ResourceNavigationContext.isStudentMode() || selectedChapitreId != null;
+        User currentUser = UserSession.getCurrentUser();
+        if (currentUser != null && currentUser.getRole() != User.Role.ROLE_ETUDIANT) {
+            studentMode = false;
+            selectedChapitreId = null;
+            ResourceNavigationContext.clear();
+        }
+
         loadCategories();
+        chapitreTitles = resourceService.getChapitreTitles();
         setupTable();
+        configureModeUi();
         loadResources();
+    }
+
+    private void configureModeUi() {
+        if (!studentMode) {
+            return;
+        }
+
+        if (createButton != null) {
+            createButton.setVisible(false);
+            createButton.setManaged(false);
+        }
+        if (actionsColumn != null) {
+            actionsColumn.setVisible(false);
+        }
+        String titreChapitre = ResourceNavigationContext.getChapitreTitre();
+        if (pageTitleLabel != null && titreChapitre != null && !titreChapitre.isBlank()) {
+            pageTitleLabel.setText("Ressources du chapitre - " + titreChapitre);
+        }
     }
 
     private void loadCategories() {
@@ -83,193 +113,103 @@ public class ResourceListController {
         titreColumn.setCellValueFactory(new PropertyValueFactory<>("titre"));
 
         categorieColumn.setCellValueFactory(cellData -> {
-            String categorieNom = cellData.getValue().getCategorieNom();
-            String name = categoryNames.getOrDefault(categorieNom, "N/A");
-            return new javafx.beans.property.SimpleStringProperty(name);
+            resources r = cellData.getValue();
+            if (studentMode) {
+                return new SimpleStringProperty(toDisplayType(r.getType()));
+            }
+            return new SimpleStringProperty(categoryNames.getOrDefault(r.getCategorieNom(), "N/A"));
+        });
+
+        chapitreColumn.setCellValueFactory(cellData -> {
+            resources r = cellData.getValue();
+            String titreChapitre = chapitreTitles.get(r.getChapitreId());
+            return new SimpleStringProperty(titreChapitre == null || titreChapitre.isBlank() ? "N/A" : titreChapitre);
         });
 
         dateColumn.setCellValueFactory(cellData ->
-                new javafx.beans.property.SimpleStringProperty(cellData.getValue().getDisponibleLe()));
+                new SimpleStringProperty(valueOrNA(cellData.getValue().getDisponibleLe())));
 
-        fileColumn.setCellFactory(column -> new TableCell<>() {
-            private final Hyperlink downloadLink = new Hyperlink("Telecharger");
-
-            {
-                downloadLink.setOnAction(event -> {
-                    resources resource = getTableView().getItems().get(getIndex());
-                    downloadResource(resource);
-                });
-            }
-
+        statusColumn.setCellValueFactory(cellData ->
+                new SimpleStringProperty(resourceService.isDisponible(cellData.getValue()) ? "Disponible" : "Non disponible"));
+        statusColumn.setCellFactory(col -> new TableCell<>() {
             @Override
-            protected void updateItem(Void item, boolean empty) {
+            protected void updateItem(String item, boolean empty) {
                 super.updateItem(item, empty);
-                if (empty) {
-                    setGraphic(null);
+                if (empty || item == null) {
+                    setText(null);
+                    setStyle("");
                     return;
                 }
-
-                resources resource = getTableView().getItems().get(getIndex());
-                boolean hasContent = resource != null
-                        && resource.getContenu() != null
-                        && !resource.getContenu().trim().isEmpty();
-
-                downloadLink.setDisable(!hasContent);
-                setGraphic(downloadLink);
+                setText(item);
+                if ("Disponible".equals(item)) {
+                    setStyle("-fx-text-fill: #198754; -fx-font-weight: bold;");
+                } else {
+                    setStyle("-fx-text-fill: #f59e0b; -fx-font-weight: bold;");
+                }
             }
         });
 
-        actionColumn.setCellFactory(column -> new TableCell<>() {
-            private final Button editButton = new Button("Modifier");
+        contenuColumn.setCellValueFactory(cellData ->
+                new SimpleStringProperty(formatContenu(cellData.getValue().getContenu())));
+
+        actionsColumn.setCellFactory(col -> new TableCell<>() {
+            private final Button editBtn = new Button("Modifier");
+            private final Button deleteBtn = new Button("Supprimer");
+            private final HBox pane = new HBox(8, editBtn, deleteBtn);
 
             {
-                editButton.setStyle("-fx-background-color: #2196F3; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 4;");
-                editButton.setOnAction(event -> {
-                    resources resource = getTableView().getItems().get(getIndex());
-                    openResourceForm(resource);
+                editBtn.setStyle("-fx-background-color:#ede9fe; -fx-text-fill:#5b21b6; -fx-font-weight:bold; -fx-background-radius:8; -fx-padding:7 12;");
+                deleteBtn.setStyle("-fx-background-color:#fee2e2; -fx-text-fill:#991b1b; -fx-font-weight:bold; -fx-background-radius:8; -fx-padding:7 12;");
+                pane.setAlignment(Pos.CENTER);
+                editBtn.setOnAction(event -> {
+                    resources res = getTableView().getItems().get(getIndex());
+                    if (res != null) {
+                        openResourceForm(res);
+                    }
+                });
+                deleteBtn.setOnAction(event -> {
+                    resources res = getTableView().getItems().get(getIndex());
+                    if (res != null) {
+                        handleDelete(res);
+                    }
                 });
             }
 
             @Override
             protected void updateItem(Void item, boolean empty) {
                 super.updateItem(item, empty);
-                if (empty) {
-                    setGraphic(null);
-                } else {
-                    setGraphic(new HBox(8, editButton));
-                }
+                setGraphic(empty ? null : pane);
             }
         });
     }
 
-    private void downloadResource(resources resource) {
-        if (resource == null || resource.getContenu() == null || resource.getContenu().trim().isEmpty()) {
-            showError("Aucun fichier a telecharger pour cette ressource.");
-            return;
+    private String toDisplayType(String type) {
+        if (type == null || type.isBlank()) {
+            return "N/A";
         }
-
-        String contenu = resource.getContenu().trim();
-        if (contenu.startsWith("http://") || contenu.startsWith("https://")) {
-            downloadFromUrl(contenu, resource.getTitre());
-            return;
-        }
-
-        Path source = resolveLocalResourcePath(contenu);
-        if (source == null) {
-            showError("Fichier introuvable pour cette ressource:\n" + contenu);
-            return;
-        }
-
-        downloadFromLocalPath(source);
+        return type.substring(0, 1).toUpperCase() + type.substring(1).toLowerCase();
     }
 
-    private Path resolveLocalResourcePath(String rawContent) {
-        try {
-            Path direct = Paths.get(rawContent).toAbsolutePath().normalize();
-            if (Files.exists(direct)) {
-                return direct;
-            }
-        } catch (Exception ignored) {
-        }
-
-        try {
-            Path fromProject = Paths.get("").toAbsolutePath().resolve(rawContent).normalize();
-            if (Files.exists(fromProject)) {
-                return fromProject;
-            }
-        } catch (Exception ignored) {
-        }
-
-        try {
-            Path fileName = Paths.get(rawContent).getFileName();
-            if (fileName != null) {
-                Path fromStorage = Paths.get("storage", "resources")
-                        .toAbsolutePath()
-                        .resolve(fileName.toString())
-                        .normalize();
-                if (Files.exists(fromStorage)) {
-                    return fromStorage;
-                }
-            }
-        } catch (Exception ignored) {
-        }
-
-        return null;
+    private String valueOrNA(String value) {
+        return (value == null || value.isBlank()) ? "N/A" : value;
     }
 
-    private void downloadFromLocalPath(Path source) {
-        FileChooser chooser = new FileChooser();
-        chooser.setTitle("Telecharger le fichier");
-        chooser.setInitialFileName(source.getFileName().toString());
-        File targetFile = chooser.showSaveDialog(resourceTable.getScene().getWindow());
-        if (targetFile == null) {
-            return;
+    private String formatContenu(String contenu) {
+        if (contenu == null || contenu.isBlank()) {
+            return "N/A";
         }
-
-        try {
-            Files.copy(source, targetFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-            showInfo("Telechargement termine", "Fichier enregistre:\n" + targetFile.getAbsolutePath());
-        } catch (IOException e) {
-            showError("Erreur de telechargement: " + e.getMessage());
+        String normalized = contenu.replace("\n", " ").trim();
+        if (normalized.length() <= 60) {
+            return normalized;
         }
-    }
-
-    private void downloadFromUrl(String url, String titre) {
-        FileChooser chooser = new FileChooser();
-        chooser.setTitle("Telecharger le fichier");
-        chooser.setInitialFileName(buildDefaultFileName(url, titre));
-        File targetFile = chooser.showSaveDialog(resourceTable.getScene().getWindow());
-        if (targetFile == null) {
-            return;
-        }
-
-        try (InputStream in = new URL(url).openStream()) {
-            Files.copy(in, targetFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-            showInfo("Telechargement termine", "Fichier enregistre:\n" + targetFile.getAbsolutePath());
-        } catch (IOException e) {
-            showError("Impossible de telecharger ce lien: " + e.getMessage());
-        }
-    }
-
-    private String buildDefaultFileName(String url, String titre) {
-        try {
-            String path = new URL(url).getPath();
-            if (path != null && !path.isBlank()) {
-                int idx = path.lastIndexOf('/');
-                String name = idx >= 0 ? path.substring(idx + 1) : path;
-                if (!name.isBlank()) {
-                    return name;
-                }
-            }
-        } catch (Exception ignored) {
-        }
-
-        if (titre != null && !titre.isBlank()) {
-            return titre;
-        }
-
-        return "fichier";
-    }
-
-    private void showError(String message) {
-        Alert alert = new Alert(Alert.AlertType.ERROR);
-        alert.setTitle("Erreur");
-        alert.setHeaderText(null);
-        alert.setContentText(message);
-        alert.showAndWait();
-    }
-
-    private void showInfo(String title, String message) {
-        Alert alert = new Alert(Alert.AlertType.INFORMATION);
-        alert.setTitle(title);
-        alert.setHeaderText(null);
-        alert.setContentText(message);
-        alert.showAndWait();
+        return normalized.substring(0, 57) + "...";
     }
 
     private void loadResources() {
-        List<resources> resources = resourceService.getAll();
-        resourceTable.setItems(FXCollections.observableArrayList(resources));
+        List<resources> resourcesList = (selectedChapitreId != null)
+                ? resourceService.getByChapitreId(selectedChapitreId)
+                : resourceService.getAll();
+        resourceTable.setItems(FXCollections.observableArrayList(resourcesList));
     }
 
     private void loadSearchResults(String keyword) {
@@ -277,8 +217,19 @@ public class ResourceListController {
             loadResources();
             return;
         }
-        List<resources> resources = resourceService.search(keyword.trim());
-        resourceTable.setItems(FXCollections.observableArrayList(resources));
+        String k = keyword.trim().toLowerCase();
+        List<resources> base = (selectedChapitreId != null)
+                ? resourceService.getByChapitreId(selectedChapitreId)
+                : resourceService.search(keyword.trim());
+
+        List<resources> filtered = base.stream()
+                .filter(r -> containsIgnoreCase(r.getTitre(), k) || containsIgnoreCase(r.getContenu(), k))
+                .toList();
+        resourceTable.setItems(FXCollections.observableArrayList(filtered));
+    }
+
+    private boolean containsIgnoreCase(String value, String keyword) {
+        return value != null && value.toLowerCase().contains(keyword);
     }
 
     @FXML
@@ -312,6 +263,16 @@ public class ResourceListController {
     }
 
     @FXML
+    private void goRessourceDashboard(ActionEvent event) {
+        loadPage(event, "/RessourceDashboard.fxml");
+    }
+
+    @FXML
+    private void goRessourceCalendar(ActionEvent event) {
+        loadPage(event, "/RessourceCalendar.fxml");
+    }
+
+    @FXML
     private void goExamens(ActionEvent event) {
         loadPage(event, "/ExamenView.fxml");
     }
@@ -335,6 +296,32 @@ public class ResourceListController {
         loadPage(event, "/Login.fxml");
     }
 
+    private void handleDelete(resources resource) {
+        Alert confirmation = new Alert(Alert.AlertType.CONFIRMATION);
+        confirmation.setTitle("Confirmation");
+        confirmation.setHeaderText("Supprimer la ressource");
+        confirmation.setContentText("Etes-vous sur de vouloir supprimer la ressource \"" + resource.getTitre() + "\" ?");
+
+        if (confirmation.showAndWait().orElse(ButtonType.CANCEL) == ButtonType.OK) {
+            try {
+                resourceService.delete(resource.getId());
+                loadResources();
+                Alert alert = new Alert(Alert.AlertType.INFORMATION);
+                alert.setTitle("Succes");
+                alert.setHeaderText(null);
+                alert.setContentText("Ressource supprimee avec succes !");
+                alert.showAndWait();
+            } catch (Exception e) {
+                e.printStackTrace();
+                Alert alert = new Alert(Alert.AlertType.ERROR);
+                alert.setTitle("Erreur");
+                alert.setHeaderText("Impossible de supprimer la ressource");
+                alert.setContentText(e.getMessage());
+                alert.showAndWait();
+            }
+        }
+    }
+
     private void openResourceForm(resources resource) {
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource("/ajouterRessource.fxml"));
@@ -354,8 +341,10 @@ public class ResourceListController {
 
     private void loadPage(ActionEvent event, String fxmlPath) {
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
-            Parent root = loader.load();
+            if (!"/listeRessources.fxml".equals(fxmlPath)) {
+                ResourceNavigationContext.clear();
+            }
+            Parent root = FXMLLoader.load(getClass().getResource(fxmlPath));
             Stage stage = (Stage) ((Node) event.getSource()).getScene().getWindow();
             stage.setScene(new Scene(root));
             stage.show();
